# animus-mind

./: .gitignore  README.md  env-template  pyproject.toml
apps/api/: main.py
apps/api/dependencies/: validated_body.py
apps/api/middleware/: capability_grant.py
apps/api/routers/: conversations.py
apps/cli/: main.py
apps/worker/: main.py
contracts/: __init__.py  validator.py
contracts/schemas/: action.schema.json  action_receipt.schema.json  agent_contract.schema.json  approval_receipt.schema.json  assessment.schema.json  capability_grant.schema.json  claim.schema.json  common.schema.json  context_envelope.schema.json  decision.schema.json  entity.schema.json  event.schema.json  forecast.schema.json  hypothesis.schema.json  ledger_event.schema.json  lesson.schema.json  memory_candidate.schema.json  object_version.schema.json  observation.schema.json  outbox_entry.schema.json  outcome.schema.json  pattern.schema.json  policy_decision.schema.json  signal.schema.json  source.schema.json  trace.schema.json
database/migrations/: README  env.py
database/migrations/versions/: 001_initial_schema.py
database/models/: __init__.py
docs/: README.md
docs/architecture/: Animus_World_Model_Architecture_v1.0.md
docs/architecture/decisions/: ADL-20260618-001.md  ADR-001.md
docs/artifacts/: Animus_v2.2_Implementation_Roadmap_and_Engineering_Guidelines.md
docs/migration/: v2.3-to-mind.md
docs/roadmap/: v2.2.md
infra/local/: Dockerfile  docker-compose.yml
modules/identity_policy/: __init__.py  capability_store.py  policy_decision_point.py
modules/object_core/: durable_store.py
scripts/: evidence_assembly.py  setup_postgres.py  truth-baseline.py
tests/adversarial/: test_object_core_concurrency.py
tests/schema/: test_schemas_compile.py
tests/unit/: test_identity_policy.py
