[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "animus-mind"
version = "0.1.0"
description = "Persistent, self-improving personal intelligence — Mind-class exocortex"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "AreteDriver"}]
keywords = ["ai", "exocortex", "mind-class", "local-first", "persistent-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Schema / validation
    "jsonschema>=4.23",
    "referencing>=0.35",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP
    "httpx>=0.27",
    # Async / workers
    "celery>=5.4",
    "redis>=5.0",
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    # Security
    "cryptography>=42.0",
    "pyjwt>=2.8",
    # Observability
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
]

[tool.hatch.build.targets.wheel]
artifacts = ["*.schema.json", "*.yaml", "*.sql"]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
animal = "apps.cli.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
